--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: white;
+  line-height: 1.5rem;
 }
+
+.grid-container {
+    max-width: 1100px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    padding: 20px;
+    margin: 0 auto;
+  }
+
+  .model-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .model-item:hover{
+    box-shadow: 2px 2px 2px black;
+    opacity:0.7;
+  }
+
+  .model-image {
+    height: 200px;
+    width:100%;
+    height: auto;
+  }
+
+  .model-title {
+    margin-top: 10px;
+    font-weight: bold;
+  }
+
+  /* navBar  */
+  .navbar ul{
+    height: 50px;
+    background-color:black;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    color:white;
+  }
+
+  .navbar li{
+    list-style: none;
+    color:rgb(222, 211, 211);
+  }
+
+  .nav-link{
+    text-decoration: none; /* Remove underline */
+    color: white;
+    font-size: 20px;
+  }
+
+  .nav-link:hover{
+    opacity: 0.7;
+  }
