--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body{
   /* navBar  */
   .navbar ul{
     height: 50px;
-    background-color:black;
+    background-color: rgb(177, 191, 190);
     display: flex;
     justify-content:space-around;
     align-items: center;
@@ -64,3 +64,37 @@ body{
   .nav-link:hover{
     opacity: 0.7;
   }
+
+  /* form  */
+  .form-container{
+    width:60vw;
+    height: 70vh;
+    margin:30px auto;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(206, 218, 217);
+  }
+
+  .form-container input{
+    width:80%;
+    height: 40px;
+    margin: 10px auto;
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+  .btn{
+    height: 40px;
+    width: 80%;
+    font-weight: bold;
+    color: #ccc;
+    background-color: blue;
+    border-radius: 5px;
+    margin: 20px auto;
+  }
+  
+
+ 
