--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,15 @@
 body{
   background-color: white;
   line-height: 1.5rem;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
 }
+
+.title{
+  color: #828080;
+  margin: 20px 40px;
+}
+
 
 .grid-container {
     max-width: 1100px;
@@ -41,6 +49,11 @@ body{
   }
 
   /* navBar  */
+  .navbar{
+    position: sticky;
+    z-index: 1;
+    top: 0;
+  }
   .navbar ul{
     height: 50px;
     background-color: rgb(177, 191, 190);
@@ -96,5 +109,45 @@ body{
     margin: 20px auto;
   }
   
+  /* single-model  */
 
- 
+  .model-container{
+    max-width: 1100px;
+    margin:35px auto;
+  }
+
+  .first{
+    display: flex;
+    margin-bottom: 30px;
+  }
+
+ .details{
+  display: flex;
+  flex-direction: column;
+  line-height: 30px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgb(230, 225, 225);
+  margin: 0 50px;
+  border-radius: 5px;
+  position: relative;
+  color: #828080;
+ }
+
+ .model-img{
+    width: 50vw;
+    height: 60vh;
+    border-radius: 5px;
+    box-shadow: 2px 3px 3px rgb(137, 137, 137);
+ }
+
+ .model-info{
+  margin:10px;
+  padding: 20px;
+ }
+
+ .username{
+   color: #b7b6b6;
+   position: absolute;
+   bottom: 10px;
+ }
