--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,16 @@ body{
   justify-content: center;
   color:gray;
  }
+
+ /* featured-models  */
+ .feature-container {
+    height: 55vh;
+    max-width: 1100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    padding: 20px;
+    margin: 50px auto;
+  }
+
+ 
