--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body{
 }
 
 .title{
-  color: #828080;
+  color: black;
   margin: 20px 40px;
 }
 
@@ -24,12 +24,14 @@ body{
     grid-gap: 20px;
     padding: 20px;
     margin: 0 auto;
+    
   }
 
   .model-item {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
+    background-color: white;
   }
 
   .model-item:hover{
@@ -55,28 +57,35 @@ body{
     top: 0;
   }
   .navbar ul{
-    height: 50px;
-    background-color: rgb(177, 191, 190);
+    height: 60px;
+    background-color: white;
     display: flex;
     justify-content:space-around;
     align-items: center;
-    color:white;
+    border-bottom: 1px solid rgb(206, 206, 206);
+    color:#535050;
   }
 
   .navbar li{
     list-style: none;
-    color:rgb(222, 211, 211);
+    color:rgb(95, 90, 90);
     font-weight: bold;
   }
 
+  
   .nav-link{
     text-decoration: none; /* Remove underline */
-    color: white;
+    color: rgb(137, 132, 132);
     font-size: 20px;
   }
-
+  
   .nav-link:hover{
     opacity: 0.7;
+    color: rgb(10, 10, 205);
+  }
+  .logo{
+    color: blue;
+    font-size: xx-large;
   }
 
   /* form  */
@@ -86,10 +95,10 @@ body{
     margin:30px auto;
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    /* border: 1px solid rgb(191, 188, 188); */
     justify-content: center;
     align-items: center;
-    background-color: rgb(206, 218, 217);
+    background-color: rgb(244, 240, 249);
   }
 
   .form-container input{
@@ -98,16 +107,32 @@ body{
     margin: 10px auto;
     border-radius: 5px;
     padding: 10px;
+    border: none;
   }
 
   .btn{
     height: 40px;
     width: 80%;
     font-weight: bold;
-    color: #ccc;
-    background-color: blue;
+    color: white;
+    font-size: 15px;
+    background-color:blue;
     border-radius: 5px;
     margin: 20px auto;
+    border: 1px solid rgb(214, 212, 212);
+  }
+
+  .btn-primary{
+    height: 45px;
+    width: 200px;
+    font-weight: bold;
+    color: white;
+    background-color:blue;
+    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid rgb(255, 255, 255);
+    margin:20px 100px;
+    font-size: 15px;
   }
   
   /* single-model  */
@@ -160,6 +185,7 @@ body{
   align-items: center;
   justify-content: center;
   color:gray;
+  /* background-color: white; */
  }
 
  /* featured-models  */
